# agopen-rate-can-ecu

./: .gitignore
docs/: CAN Szerviz PGN.md  PGN_DIAG.md  README.md  Vetőgép kalibrációs táblázat.md  architecture.md  can-matrix.md  ecu-service-tool-pgns.md  monitor-output.md  session-notes.md
firmware/: adc_V3.rar
firmware/STM32_6pwm_can_simple/: README.md
firmware/STM32_6pwm_can_simple/include/: app_status.h  config.h
firmware/STM32_6pwm_can_simple/src/: can_status.cpp  main.cpp
firmware/STM32_6pwm_can_simple/tools/: plot_hall_rpm.py  plot_hall_rpm_web.py
firmware/STM32_nod/: BRINGUP_SUMMARY.md  platformio.ini
firmware/STM32_nod/include/: config.h  configurable_hall_sensor.h  driver_test.h  hall_test.h  motor_test.h
firmware/STM32_nod/src/: configurable_hall_sensor.cpp  driver_test.cpp  hall_test.cpp  main.cpp  motor_test.cpp
firmware/STM32_nod/tools/: parse_motor_test_log.py
firmware/STM32_nod_V2/: README.md  platformio.ini
firmware/STM32_nod_V2/include/: adc_dma.h  app_status.h  can_status.h  config.h
firmware/STM32_nod_V2/src/: adc_dma.cpp  can_status.cpp  main.cpp
firmware/STM32_nod_V2/tools/: plot_hall_rpm_web.py
firmware/stm32g-node/: CMakeLists.txt  CMakePresets.json  MOTOR_NODE_HANDOFF.md  README.md
firmware/stm32g-node/STM32G_node/: .mxproject  CMakeLists.txt  CMakePresets.json  STM32G_node.ioc  agopen_can_dev_node1_local.dbc  stm32g431xb_flash.ld
firmware/stm32g-node/STM32G_node/Core/Inc/: app_debug.h  app_hall.h  app_motor_control.h  app_motor_pwm.h  drv8301.h  fdcan.h  main.h  simplefoc_math.h  stm32g4xx_hal_conf.h
firmware/stm32g-node/STM32G_node/Core/Src/: app_debug.c  app_hall.c  app_motor_control.cpp  app_motor_pwm.c  drv8301.c  main.c  simplefoc_math.cpp  stm32g4xx_hal_msp.c
firmware/stm32g-node/STM32G_node/EWARM/: Project.eww  STM32G_node.ewd  STM32G_node.ewp
firmware/stm32g-node/STM32G_node/USB_Device/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
firmware/stm32g-node/cmake/: gcc-arm-none-eabi.cmake
firmware/stm32g-node/include/: motor_node_can.h
firmware/stm32g-node/simplefoc_minimal_3pwm/: README.md  platformio.ini
firmware/stm32g-node/simplefoc_minimal_3pwm/src/: main.cpp
firmware/stm32g-node/simplefoc_poc/: README.md  platformio.ini
firmware/stm32g-node/simplefoc_poc/src/: main.cpp
firmware/stm32g-node/src/: motor_node_can.c
firmware/stm32g-node/stubs/: fdcan.h
firmware/teensy-ecu/ecu-v1/rate_ecu/: platformio.ini
firmware/teensy-ecu/ecu-v1/rate_ecu/src/: blockage_output.cpp  blockage_output.h  can_bus.cpp  can_bus.h  config.h  custom_pgn_protocol.h  ecu_state.cpp  ecu_state.h  ethernet_link.cpp  ethernet_link.h  legacy_rate_protocol.h  main.cpp  node_manager.cpp  node_manager.h  planter_output.cpp  planter_output.h  rate_math.cpp  rate_math.h  runtime_config.cpp  runtime_config.h  service_can_protocol.h  sync_axis.cpp  sync_axis.h
hardware/: README.md  bom  bom.md
tools/DBC/: agopen_can_8nodes.dbc  agopen_can_dev_node1.dbc
tools/Motor-Simulator/: README.md  motor_simulator_pyside.py  run_motor_simulator.bat  simulator_V5.py
tools/pyside-ecu-service/: README.md  ecu_service_tool.py  run_ecu_service_tool.bat
